tests/integration/error/null_non_reference.alo
// expect-error: Type mismatch in variable initialization: expected 'int', got 'null'

fun main() -> void {
  imut value: int = null;
}
